@@ -2,6 +2,7 @@ dnsmasq (2.79-1) unstable; urgency=low
 
    * New upstream.
    * Fix trust-anchor regex in init script. (closes: #884347)
+   * Fix exit code for dhcp_release6 (closes: #833596)
 
  -- Simon Kelley <simon@thekelleys.org.uk>  Tue, 7 Sep 2017 22:47:01 +0000
 
